--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+<% layout('/layouts/boilerplate') %>
 
 <body>
   <h3>edit your listing</h3>
@@ -25,5 +18,3 @@
     <button>edit</button>
   </form>
 </body>
-
-</html>
