--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Listings</title>
-</head>
-
+<% layout('/layouts/boilerplate') %>
 <body>
     <h3>All Listings</h3>
-    <form action="/listings/new" method="GET">
-        <button>New Listing</button>
-    </form>
     <ul>
         <% for (let listing of allListings) {%>
             <li>
@@ -20,5 +9,3 @@
             <% } %>
     </ul>
 </body>
-
-</html>
