--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<% layout('/layouts/boilerplate') %>
+
 <body>
     <h3>Create new listing</h3>
     <form action="/listings" method="POST">
@@ -23,4 +18,3 @@
         <button>submit</button>
     </form>
 </body>
-</html>
