--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <style>
-    img {
-      height: 100px;
-      width: 100px;
-    }
-  </style>
-</head>
+<% layout('/layouts/boilerplate') %>
 
 <body>
   <h3>Listing Details : </h3>
@@ -29,5 +16,3 @@
     <button>Delete</button>
   </form>
 </body>
-
-</html>
