--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,46 @@
 .navbar {
-    height: 5rem;
-    background-color: rgba(255, 255, 255, 0.594);
+  height: 5rem;
+  background-color: rgba(255, 255, 255, 0.594);
+  backdrop-filter: blur(18px);
 }
 
 .fa-compass {
-    color: #fe424d;
-    font-size: 2rem;
+  color: #fe424d;
+  font-size: 2rem;
 }
 
 .nav-link {
-    color: #222222 ;
+  color: #222222;
+}
+
+/* Footer */
+.f-info-links,
+.f-info-socials,
+.f-info-brand {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.f-info i {
+  font-size: 1.2rem;
+  margin-right: 1rem;
+}
+
+.f-info-links a {
+  text-decoration: none;
+  color: #222222;
+}
+.f-info-links a:hover {
+  text-decoration: underline;
+}
+
+.f-info {
+  height: 8rem;
+  background-color: #ebebeb;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
 }
