--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
 .navbar {
   height: 5rem;
   background-color: rgba(255, 255, 255, 0.594);
@@ -44,3 +48,35 @@
   justify-content: center;
   text-align: center;
 }
+
+/* Cards */
+.card {
+  border: none;
+  margin-bottom: 2rem;
+  transition: 0.5s;
+}
+
+.card:hover {
+  scale: 0.95;
+}
+
+.card-img-top {
+  border-radius: 1rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+
+.card-body {
+  padding: 0;
+}
+
+.card-text {
+  font-weight: 400;
+}
+
+.listing-link {
+  text-decoration: none;
+}
+
+/* Card Effect */
