--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,15 @@
 <% layout('/layouts/boilerplate') %>
-<body>
-    <h3>All Listings</h3>
-    <ul>
-        <% for (let listing of allListings) {%>
-            <li>
-                <a href="/listings/<%= listing._id %>" ><%= listing.title %></a>
-            </li>
-            <% } %>
-    </ul>
-</body>
+
+<h3>All Listings</h3>
+<div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
+  <% for (let listing of allListings) {%>
+  <a href="/listings/<%= listing._id %>" class="listing-link">
+    <div class="card col">
+      <img src="<%= listing.image %>" class="card-img-top" alt="..." style="height: 20rem;">
+      <div class="card-body">
+        <p class="card-text"><b><%= listing.title %></b> <br>&#8377;<%= listing.price.toLocaleString("en-IN") %> /night</p>
+      </div>
+    </div>
+  </a>
+  <% } %>
+</div>
