--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,13 +57,13 @@ body {
 }
 
 /* Cards */
-.card {
+.index-card {
   border: none;
   margin-bottom: 2rem;
   transition: 0.5s;
 }
 
-.card:hover {
+.index-card:hover {
   scale: 0.95;
 }
 
@@ -91,4 +91,19 @@ body {
 .add-btn,.edit-btn {
   background-color: #fe424d;
   border: none;
+}
+
+/* show page */
+.show-img {
+  height: 30vh;
+}
+
+.btns {
+  display: flex;
+}
+
+.show-card {
+  padding: 2rem auto;
+  border: none;
+
 }
