--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,34 +3,35 @@
 <div class="row mt-3 mb-3">
   <div class="col-8 offset-2">
     <h3>edit your listing</h3>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
-        <input type="text" name="listing[title]" class="form-control" value="<%= listing.title %>">
+        <input type="text" name="listing[title]" class="form-control" value="<%= listing.title %>" required>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
-        <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+        <textarea name="listing[description]" class="form-control" required ><%= listing.description %></textarea>
       </div>
       <div class="mb-3">
         <label for="image" class="form-label">Image</label>
-        <input name="listing[image]" class="form-control" value="<%= listing.image %>">
+        <input name="listing[image]" class="form-control" value="<%= listing.image %>" required>
       </div>
       <div class="row">
         <div class="mb-3 col-md-4">
           <label for="price" class="form-label">Price</label>
-          <input type="number" name="listing[price]" class="form-control" value="<%= listing.price %>">
+          <input type="number" name="listing[price]" class="form-control" value="<%= listing.price %>" required>
         </div>
         <div class="mb-3 col-md-8">
           <label for="country" class="form-label">Country</label>
-          <input type="text" name="listing[country]" class="form-control" value="<%= listing.country %>">
+          <input type="text" name="listing[country]" class="form-control" value="<%= listing.country %>" required>
         </div>
       </div>
       <div class="mb-3">
         <label for="location" class="form-label">Location</label>
-        <input type="text" name="listing[location]" class="form-control" value="<%= listing.location %>">
+        <input type="text" name="listing[location]" class="form-control" value="<%= listing.location %>" required>
       </div>
       <button class="btn btn-dark edit-btn mt-3">edit</button>
     </form>
   </div>
 </div>
+<script src="/js/script.js"></script>
