--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -9,6 +9,7 @@
       <div class="mb-3 ">
         <label for="title" class="form-label">Title</label>
         <input type="text" name="listing[title]" class="form-control"  placeholder="Add a catchy Title"required>
+        <div class="valid-feedback">Title looks good!</div>
       </div>
 
       <div class="mb-3 ">
@@ -18,24 +19,27 @@
 
       <div class="mb-3 ">
         <label for="image" class="form-label">image</label>
-        <input name="listing[image]" class="form-control" required placeholder="Enter image URL/Link">
+        <input name="listing[image]" class="form-control" placeholder="Enter image URL/Link">
       </div>
-
+      
       <div class="row">
         <div class="mb-3 col-md-4 ">
           <label for="price" class="form-label">price</label>
           <input type="number" name="listing[price]" class="form-control" required placeholder="1234">
+          <div class="invalid-feedback">Enter a valid price</div>
         </div>
-
+        
         <div class="mb-3 col-md-8 ">
           <label for="country" class="form-label">country</label>
           <input type="text" name="listing[country]" class="form-control" required placeholder="India">
+          <div class="invalid-feedback">Enter a valid country</div>
         </div>
       </div>
-
+      
       <div class="mb-3 ">
         <label for="location" class="form-label">location</label>
         <input type="text" name="listing[location]" class="form-control" required placeholder="Jaipur, Rajasthan">
+        <div class="invalid-feedback">Enter a valid location</div>
       </div>
 
       <button class="btn btn-dark add-btn">Add</button>
