--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="mb-3 col-md-4 ">
           <label for="price" class="form-label">price</label>
-          <input type="number" name="listing[price]" class="form-control" required placeholder="1234">
+          <input type="text" name="listing[price]" class="form-control" required placeholder="1234">
           <div class="invalid-feedback">Enter a valid price</div>
         </div>
         
