--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,12 +1,12 @@
 <% layout('/layouts/boilerplate') %>
 <div class="row mt-3">
   <div class="col-8 offset-3">
-    <h3>Listing Details : </h3>
+    <h3><%= listings.title %></h3>
   </div>
   <div class="card col-6 offset-3 show-card">
     <img src="<%= listings.image %>" class="card-img-top show-img" alt="listings-image">
     <div class="card-body">
-      <p class="card-text"><b><%= listings.title %></b><br>
+      <p class="card-text"><b></b><br>
         <%= listings.description %><br>
         &#8377; <%= listings.price %><br>
         <%= listings.location %> <br>
