--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -22,3 +22,19 @@
     <button class="btn btn-dark offset-5">Delete</button>
   </form>
 </div>
+
+<div class="col-8 offset-3">
+  <hr>
+  <h4>Leave a Review</h4>
+  <form action="/listings/<%= listings.id %>/reviews" class="mb-3 mt-3" method="post">
+    <div class="mb-3 mt-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
+    </div>
+    <div class="mb-3 mt-3">
+      <label for="comment" class="form-label">Comment</label>
+      <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+    </div>
+    <button class="btn btn-ouline-dark">Submit</button>
+  </form>
+</div>
