added more validation for reviews

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -34,6 +34,7 @@
     <div class="mb-3 mt-3">
       <label for="comment" class="form-label">Comment</label>
       <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
+      <div class="invalid-feedback">Please add some comments for review</div>
     </div>
     <button class="btn btn-ouline-dark">Submit</button>
   </form>
