--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -38,4 +38,12 @@
     </div>
     <button class="btn btn-ouline-dark">Submit</button>
   </form>
+  <hr>
+
+  <h4>All Reviews</h4>
+  <ul>
+    <% for(review of listings.reviews){%>
+    <li><%= review.comment %>, <%= review.rating %> Star</li>
+    <% } %>
+  </ul>
 </div>
