--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -14,36 +14,44 @@
       </p>
     </div>
   </div>
-</div>
-<br>
-<div class="btns">
-  <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 add-btn">Edit</a>
-  <form method="POST" action="/listings/<%= listings._id %>?_method=DELETE">
-    <button class="btn btn-dark offset-5">Delete</button>
-  </form>
-</div>
-
-<div class="col-8 offset-3">
-  <hr>
-  <h4>Leave a Review</h4>
-  <form action="/listings/<%= listings.id %>/reviews" novalidate class="mb-3 mt-3 needs-validation" method="post">
-    <div class="mb-3 mt-3">
-      <label for="rating" class="form-label">Rating</label>
-      <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
+  <br>
+  <div class="btns">
+    <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 add-btn">Edit</a>
+    <form method="POST" action="/listings/<%= listings._id %>?_method=DELETE">
+      <button class="btn btn-dark offset-5">Delete</button>
+    </form>
+  </div>
+  
+  <div class="col-8 offset-3">
+    <hr>
+    <h4>Leave a Review</h4>
+    <form action="/listings/<%= listings.id %>/reviews" novalidate class="mb-3 mt-3 needs-validation" method="post">
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label">Comment</label>
+        <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
+        <div class="invalid-feedback">Please add some comments for review</div>
+      </div>
+      <button class="btn btn-ouline-dark">Submit</button>
+    </form>
+    <hr>
+    
+    <p><b>All Reviews</b></p>
+    <div class="row">
+      <% for(review of listings.reviews){%>
+        <div class="card review-card col-5 ms-3 mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Joe done</h5>
+            <p class="cardtext"><%= review.comment %></p>
+            <p class="cardtext"><%= review.rating %> Stars</p>
+          </div>
+        </div>
+      </div>
+      <% } %>
+      
+      
     </div>
-    <div class="mb-3 mt-3">
-      <label for="comment" class="form-label">Comment</label>
-      <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
-      <div class="invalid-feedback">Please add some comments for review</div>
-    </div>
-    <button class="btn btn-ouline-dark">Submit</button>
-  </form>
-  <hr>
-
-  <h4>All Reviews</h4>
-  <ul>
-    <% for(review of listings.reviews){%>
-    <li><%= review.comment %>, <%= review.rating %> Star</li>
-    <% } %>
-  </ul>
-</div>
+  </div>
