--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,12 +27,14 @@
     </div>
   </div>
   <br>
+  <% if(currUser && currUser._id.equals(listings.owner._id)){ %>
   <div class="btns">
     <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 add-btn">Edit</a>
     <form method="POST" action="/listings/<%= listings._id %>?_method=DELETE">
       <button class="btn btn-dark offset-5">Delete</button>
     </form>
   </div>
+  <% } %>
 
   <div class="col-8 offset-3">
     <hr>
