--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,32 +4,31 @@
     <h3><%= listings.title %></h3>
   </div>
   <div class="card col-6 offset-3 show-card">
-    <img src="<%= listings.image %>" class="card-img-top show-img" alt="listings-image">
+    <img
+      src="<%= listings.image %>"
+      class="card-img-top show-img"
+      alt="listings-image"
+    />
     <div class="card-body">
-
-      <p class="card-text"><br>
+      <p class="card-text">
+        <br />
         <b><i>Owned by:<%= listings.owner.username %></i></b>
       </p>
-      <p class="card-text">
-        <%= listings.description %><br>
-      </p>
-      <p class="card-text">
-        &#8377; <%= listings.price %><br>
-      </p>
-      <p class="card-text">
-        <%= listings.location %> <br>
-      </p>
-      <p class="card-text">
-        <%= listings.country %>
-      </p>
-      <br>
-
+      <p class="card-text"><%= listings.description %><br /></p>
+      <p class="card-text">&#8377; <%= listings.price %><br /></p>
+      <p class="card-text"><%= listings.location %> <br /></p>
+      <p class="card-text"><%= listings.country %></p>
+      <br />
     </div>
   </div>
-  <br>
+  <br />
   <% if(currUser && currUser._id.equals(listings.owner._id)){ %>
   <div class="btns">
-    <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 add-btn">Edit</a>
+    <a
+      href="/listings/<%= listings._id %>/edit"
+      class="btn btn-dark col-1 offset-3 add-btn"
+      >Edit</a
+    >
     <form method="POST" action="/listings/<%= listings._id %>?_method=DELETE">
       <button class="btn btn-dark offset-5">Delete</button>
     </form>
@@ -37,38 +36,61 @@
   <% } %>
 
   <div class="col-8 offset-3">
-    <hr>
+    <hr />
+    <% if(currUser){ %>
     <h4>Leave a Review</h4>
-    <form action="/listings/<%= listings.id %>/reviews" novalidate class="mb-3 mt-3 needs-validation" method="post">
+    <form
+      action="/listings/<%= listings.id %>/reviews"
+      novalidate
+      class="mb-3 mt-3 needs-validation"
+      method="post"
+    >
       <div class="mb-3 mt-3">
         <label for="rating" class="form-label">Rating</label>
-        <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
+        <input
+          class="form-range"
+          type="range"
+          min="1"
+          max="5"
+          id="rating"
+          name="review[rating]"
+        />
       </div>
       <div class="mb-3 mt-3">
         <label for="comment" class="form-label">Comment</label>
-        <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
+        <textarea
+          class="form-control"
+          name="review[comment]"
+          id="comment"
+          cols="30"
+          rows="5"
+          required
+        ></textarea>
         <div class="invalid-feedback">Please add some comments for review</div>
       </div>
       <button class="btn btn-ouline-dark">Submit</button>
     </form>
-    <hr>
+    <hr />
+    <% } %>
 
     <p><b>All Reviews</b></p>
     <div class="row">
       <% for(review of listings.reviews){%>
       <div class="card review-card col-5 ms-3 mb-3">
         <div class="card-body">
-          <h5 class="card-title">Joe done</h5>
+          <h5 class="card-title"><%= review.author.username %></h5>
           <p class="card-text"><%= review.comment %></p>
           <p class="card-text"><%= review.rating %> Stars</p>
         </div>
-        <form action="/listings/<%= listings._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3" method="post">
+        <form
+          action="/listings/<%= listings._id %>/reviews/<%= review._id %>?_method=DELETE"
+          class="mb-3"
+          method="post"
+        >
           <button class="btn btn-sm btn-dark">Delete</button>
         </form>
       </div>
       <% } %>
     </div>
-
-
   </div>
 </div>
