--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,8 +1,8 @@
 <% layout('/layouts/boilerplate') %>
 <script>
-  const mapToken = "<%= process.env.MAP_TOKEN %>"
-  const coordinatesString = "<%= JSON.stringify(listings.geometry.coordinates) %>";
-  const coordinates = JSON.parse(coordinatesString);
+  const mapToken = "<%= process.env.MAP_TOKEN %>";
+const coordinatesString ="<%= JSON.stringify(listings.geometry.coordinates) %>";
+const coordinates = JSON.parse(coordinatesString);
 </script>
 <div class="row mt-3">
   <div class="col-8 offset-3">
