--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,155 @@
 <% layout('/layouts/boilerplate') %>
-<div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
+<style>
+  #filters {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .filter {
+    margin-top: 2rem;
+    text-align: center;
+    margin-right: 2rem;
+    opacity: 0.7;
+  }
+
+  .filter:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
+  .filter p {
+    font-size: 0.8rem;
+  }
+
+  .tax-info{
+    display: none;
+  }
+
+  .tax-toggle {
+    border: solid rgb(148, 148, 148) 1px;
+    padding: 0.8rem;
+    border-radius: 1rem;
+    /* margin-left: 5rem; */
+    margin-top: 0.6rem;
+  }
+</style>
+
+<div id="filters">
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-fire"></i>
+    </div>
+    <p>Trending</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-bed"></i>
+    </div>
+    <p>Rooms</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain-city"></i>
+    </div>
+    <p>Iconic cities</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain"></i>
+    </div>
+    <p>Mountain</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-person-swimming"></i>
+    </div>
+    <p>Amazing pools</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-campground"></i>
+    </div>
+    <p>Camping</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-brands fa-fort-awesome"></i>
+    </div>
+    <p>Castles</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-cow"></i>
+    </div>
+    <p>farms</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-regular fa-snowflake"></i>
+    </div>
+    <p>Arctic</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-igloo"></i>
+    </div>
+    <p>Domes</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-ship"></i>
+    </div>
+    <p>Boats</p>
+  </div>
+  <div class="tax-toggle">
+    <div class="form-check-reverse form-switch">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        role="switch"
+        id="flexSwitchCheckDefault"
+      />
+      <label class="form-check-label" for="flexSwitchCheckDefault"
+        >Display total after taxes</label
+      >
+    </div>
+  </div>
+</div>
+
+<div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 mt-3">
   <% for (let listing of listings) {%>
   <a href="/listings/<%= listing._id %>" class="listing-link">
     <div class="card col index-card">
-      <img src="<%= listing.image.url %>" class="card-img-top" alt="..." style="height: 20rem;">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top"
+        alt="..."
+        style="height: 20rem"
+      />
       <div class="card-body">
-        <p class="card-text"><b><%= listing.title %></b> <br>&#8377;<%= listing.price.toLocaleString("en-IN") %> /night</p>
+        <p class="card-text">
+          <b><%= listing.title %></b> <br />&#8377;<%=
+          listing.price.toLocaleString("en-IN") %> /night&nbsp;&nbsp;
+          <i class="tax-info">+18% GST</i>
+        </p>
       </div>
     </div>
   </a>
   <% } %>
 </div>
+
+<script>
+  let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+  taxSwitch.addEventListener("click", () => {
+    let taxInfo = document.getElementsByClassName("tax-info");
+    console.log(taxInfo)
+    for (info of taxInfo) {
+      if(info.style.display != "inline"){
+      info.style.display = "inline"}
+     else {
+      info.style.display = "none"
+    }
+  }
+})
+</script>
