--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,27 @@
+:root[data-theme="light"] {
+  --text: #0b0a0b;
+  --background: #f5f4f6;
+  --primary: #887698;
+  --secondary: #b8abc4;
+  --accent: #a28fb3;
+}
+.dark-theme{
+  --text: #f5f4f5;
+  --background: #0a090b;
+  --primary: #796789;
+  --secondary: #483b54;
+  --accent: #604c70;
+}
+
+
+
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: var(--background);
+  color: var(--text);
 }
 
 .container {
@@ -11,19 +30,20 @@ body {
 
 .navbar {
   height: 5rem;
-  background-color: rgba(255, 255, 255);
-  /* backdrop-filter: blur(18px); */
+  background-color: var(--accent);
 }
+
 .container-fluid {
-  background-color: rgba(255, 255, 255);
+  background-color: var(--accent);
 }
+
 .fa-compass {
   color: #fe424d;
   font-size: 2rem;
 }
 
 .nav-link {
-  color: #222222;
+  color: var(--text);
 }
 
 /* Footer */
@@ -43,7 +63,7 @@ body {
 
 .f-info-links a {
   text-decoration: none;
-  color: #222222;
+  color: var(--text);
 }
 .f-info-links a:hover {
   text-decoration: underline;
@@ -51,7 +71,7 @@ body {
 
 .f-info {
   height: 8rem;
-  background-color: #ebebeb;
+  background-color: var(--secondary);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -113,10 +133,6 @@ body {
   padding: 2rem auto;
   border: none;
 }
-/* 
-.review-card {
-  border: solid black 1px;
-} */
 
 #map {
   height: 400px;
@@ -124,3 +140,120 @@ body {
   border-radius: 0.6rem;
 }
 
+#filters {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.filter {
+  margin-top: 2rem;
+  text-align: center;
+  margin-right: 2rem;
+  opacity: 0.7;
+}
+
+.filter:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+.filter p {
+  font-size: 0.8rem;
+}
+
+.tax-info{
+  display: none;
+}
+
+.tax-toggle {
+  border: solid rgb(148, 148, 148) 1px;
+  padding: 0.8rem;
+  border-radius: 1rem;
+  /* margin-left: 5rem; */
+  margin-top: 0.6rem;
+}
+
+.navbar-toggler:focus-visible {
+border: none;
+}
+
+
+
+@media (max-width: 720px) {
+  .navbar1 {
+      height: 5rem;
+  }
+
+  .listing-link{
+    display: flex;
+  }
+
+ #filters{
+  display: none;
+ }
+
+ #map{
+  width: 75%;
+ }
+
+ .btns{
+  flex-direction: row;
+  margin: 0;
+ }
+
+ .edit-btn{
+  width: 4rem;
+ }
+
+  .fa-compass {
+      font-size: 2.5rem;
+  }
+
+  .nav-link {
+      font-size: 1.5rem;
+  }
+
+  .f-info {
+      height: 6rem;
+  }
+
+  .f-info-links a {
+      font-size: 1.3rem;
+  }
+
+  .card {
+      width: 19rem;
+  }
+
+  .card-body-show {
+      width: 22rem;
+      padding: 2rem;
+  }
+
+  .new {
+      display: block;
+      width: 23rem;
+  }
+
+  .form-img {
+      width: 19rem;
+      height: 20rem;
+  }
+
+  .contain {
+      padding: 2rem;
+  }
+
+  .show-img {
+      width: 15rem;
+  }
+
+  .alert {
+      width: 40rem;
+  }
+
+  .card-index {
+      margin: 1rem;
+  }
+}
