--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,7 +2,7 @@
   .search-btn {
     background-color: #fe424d;
     color: #fff;
-    border-radius:50%;
+    border-radius: 50%;
   }
 
   .search-btn:hover {
@@ -10,14 +10,17 @@
     color: #fff;
   }
 
-  .search-inp{
+  .search-inp {
     border-radius: 2rem;
     font-size: 0.8rem;
     padding: 0.5rem 3rem;
   }
-  
-</style>
 
+  .navbar,
+  .container-fluid {
+    background-color: #fff;
+  }
+</style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
@@ -46,10 +49,13 @@
             type="search"
             placeholder="Search Destination"
           />
-          <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button class="btn search-btn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </form>
       </div>
       <div class="navbar-nav ms-auto">
+        <!-- <div id="dark"><i class="fa-solid fa-circle-half-stroke"></i></div> -->
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
         <% if(!currUser){ %>
         <a class="nav-link" href="/signup"><b>Sign-up</b></a>
