--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -30,7 +30,8 @@
     <link rel="stylesheet" href="/css/rating.css" />
   </head>
 
-  <body>
+  <!-- <body> -->
+  <body data-theme="light">
     <%- include("../includes/navbar.ejs") %>
     <div class="container">
       <%- include("../includes/flash.ejs") %> <%- body %>
