--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,4 @@
-<style>
-
-</style>
+<style></style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
@@ -35,13 +33,8 @@
         </form>
       </div>
       <div class="navbar-nav ms-auto">
-        <div  class="toggle-switch">
-          <label class="switch-label">
-            <input type="checkbox" class="checkbox" id="toggle-switch" />
-            <span class="slider"></span>
-          </label>
-        </div>
-        <!-- <div id="dark"><i class="fa-solid fa-circle-half-stroke"></i></div> -->
+        <i class="fa-solid fa-circle-half-stroke" id="theme"></i>
+
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
 
         <% if(!currUser){ %>
