changed bg color

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body[data-theme="light"] {
   --text: #0a0011;
-  --background: #ebe1f2;
+  --background: #faffec;
   --secondary:#878787;
   --primary: #ac000a;
 }
